# AgilityMaps2

./: README.md  pyproject.toml
app/views/: app.html
src/: __init__.py  __main__.py
src/app/controllers/: app.py
src/modules/: path.py  router.py  static.py
static/: README.md
ui/app/css/: interface.css  print.css
ui/app/src/: add-obstacles.js  color.js  events.js  functions-obstacle.js  functions.js  init.js  interface.js  language.js  over-obstacle.js  trajectories.js  visual.js
